--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -2,6 +2,49 @@
 
     {% block content %}
 
-        <h1>Teachers</h1>
+        <div class="card">
+            <section class="avatar"></section>
+            
+            <section class="details">
+                <h3>Professor(a)</h3>
+
+                <div class="item">
+                    <div>Nome</div>
+                    <div>Marcelo Galdino</div>                
+                </div>
+
+                <div class="item">
+                    <div>Idade</div>
+                    <div>29</div>                
+                </div>
+
+                <div class="item">
+                    <div>Grau de escolaridade</div>
+                    <div>Doutor</div>                
+                </div>
+
+                <div class="item">
+                    <div>Tipo de aula</div>
+                        <div>
+                            <span>Presencial</span>
+                            <span>Online</span>
+                        </div>
+                </div>
+
+                <div class="item">
+                    <div>Acompanhamento</div>
+                        <div>
+                            <span>Algebra</span>
+                            <span>Calculo</span>
+                        </div>
+                </div>
+
+                <div class="item">
+                    <div>Desde</div>
+                    <div>01/01/2020</div>                
+                </div>
+                
+            </section>
+        </div>
 
     {% endblock content %}
