--- a/public/styles.css
+++ b/public/styles.css
@@ -13,12 +13,15 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-.links {
+header {
     width: 100%;
     padding: 32px;
     background-color: white;
     text-align: center;
     box-sizing: border-box;
+}
+
+.links {
     font-size: 22px;
 }
 
@@ -58,7 +61,7 @@ body {
 .card {
     width: 800px;
     min-height: 400px;
-    margin: 0 auto;
+    margin: 32px auto;
     box-shadow: 12px 16px 8px 4px rgba(0, 0, 0, 0.2);
     background-color: white;
     margin-top: 32px;
@@ -128,4 +131,43 @@ body {
     margin-top: 6px;
     margin-right: 8px;
     padding: 2px 16px;
+}
+
+form input {
+    width: 100%;
+    outline: none;
+    border: none;
+    padding: 12px 0;
+}
+
+form input,
+form select,
+form input[type="date"],
+form input::placeholder {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 28px;
+    color: #777;
+}
+
+form select {
+    border: none;
+    outline: none;
+}
+
+form input[type="radio"] {
+    width: initial;
+    margin-right: 4px;
+}
+
+button[type="submit"] {
+    width: 100%;
+    border: none;
+    background-color: var(--primary-color);
+    color: white;
+    font-size: 16px;
+    padding: 12px 0;
+    border-radius: 8px;
+    outline: none;
+    cursor: pointer;
 }
