--- a/views/teachers/edit.njk
+++ b/views/teachers/edit.njk
@@ -6,7 +6,7 @@
         <section class="avatar"></section>
 
         <section class="details">
-            <h3>Novo Professor(a)</h3>
+            <h3>Editar Professor(a)</h3>
 
             {% include 'teachers/fields.njk' %}
 
