--- a/views/teachers/edit.njk
+++ b/views/teachers/edit.njk
@@ -2,15 +2,38 @@
 
 {% block content %}
 
-    <form class="card" method="POST" action="/teachers">
+
+    <div class="card">
         <section class="avatar"></section>
 
         <section class="details">
-            <h3>Editar Professor(a)</h3>
 
-            {% include 'teachers/fields.njk' %}
+
+            <form method="POST" action="/teachers?_method=PUT">
+
+                <h3>Editar Professor(a)</h3>
+
+                {% include 'teachers/fields.njk' %}
+
+                <input 
+                    type="hidden" 
+                    name="id" 
+                    value="{{ teachers.id }}"
+                >
+
+            </form>
+        
+            
+            <form id="form-delete" method="POST" action="/teachers?_method=DELETE">
+                <input type="hidden" name="id" value="{{ teachers.id }}">
+                <button type="submit">Deletar</button>
+            </form>
 
         </section>
-    </form>
+
+            
+    </div>
+
+    
 
 {% endblock content %}
