--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -15,7 +15,7 @@
 
     <header>
         <div class="links">
-            <a href="/" class="active">Teachers</a>
+            <a href="/teachers" >Teachers</a>
             <a href="/students">Students</a>
         </div>
     </header>
