--- a/src/views/students/edit.njk
+++ b/src/views/students/edit.njk
@@ -8,30 +8,29 @@
 
     <div class="card">
 
-        <section class="card-image" style="background: url({{ teacher.avatar_url }}) no-repeat center center / cover">
-            {# <div class="card-image"></div> #}
+        <section class="card-image" style="background: url({{ student.avatar_url }}) no-repeat center center / cover">
         </section>
 
         <section class="card-details">
-            <form action="/teachers?_method=PUT" method="POST">
+            <form action="/students?_method=PUT" method="POST">
             
                 <h3>Editar</h3>
 
-                {% include 'teachers/fields.njk' %}
+                {% include 'students/fields.njk' %}
 
                 <input 
                     type="hidden" 
                     name="id" 
-                    value="{{ teacher.id }}"
+                    value="{{ student.id }}"
                 >
 
             </form>
             
-            <form id="form-delete" method="POST" action="/teachers?_method=DELETE">
+            <form id="form-delete" method="POST" action="/students?_method=DELETE">
                 <input 
                     type="hidden" 
                     name="id" 
-                    value="{{ teacher.id }}"
+                    value="{{ student.id }}"
                 >
 
                 <button type="submit">Deletar</button>
