--- a/src/views/teachers/index.njk
+++ b/src/views/teachers/index.njk
@@ -4,49 +4,29 @@
     <title>Teachers - My class</title>
 {% endblock head %}
 
-
 {% block content %}
-    <div class="card">
-        <section class="card-image">
-            <div class="card-image"></div>
-        </section>
-
-        <section class="card-details">
-            <h3>Detalhes</h3>
-
-            <div class="item">
-                <div>Nome</div>
-                <div>Marcelo</div>
-            </div>
-
-            <div class="item">
-                <div>Idade</div>
-                <div>29</div>
-            </div>
-
-            <div class="item">
-                <div>Grau de escolaridade</div>
-                <div>Doutorado</div>
-            </div>
-
-            <div class="item">
-                <div>Tipo de aula</div>
-                <div>A distancia</div>
-            </div>
-
-            <div class="item">
-                <div>Área de atuação</div>
-                <div>
-                    Matematica
-                    Geografia
-                </div>
-            </div>
-
-            <div class="item">
-                <div>Desde</div>
-                <div>01/01/2020</div>
-            </div>
-
-        </section>
+    <div class="card table-container">
+        <a href="teachers/create">Novo</a>
+        <table>
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Acompanhamento</th>
+                    <th>Ação</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for teacher in teachers %}
+                <tr>
+                    <td>
+                        <span style="background-image: url('{{ teacher.avatar_url }}')"></span>
+                        {{ teacher.name }}
+                    </td>
+                    <td>{{ teacher.services }}</td>
+                    <td><a href="teachers/{{ teacher.id }}">ver</a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 {% endblock content %}
