--- a/src/views/teachers/show.njk
+++ b/src/views/teachers/show.njk
@@ -6,8 +6,8 @@
 
 {% block content %}
     <div class="card">
-        <section class="card-image">
-            <div class="card-image"></div>
+        <section class="card-image" style="background: url({{ teacher.avatar_url }}) no-repeat center center / cover">
+            {# <div class="card-image"></div> #}
         </section>
 
         <section class="card-details">
