feat: new filter for teachers and teachers are ordered by total students
new filter for teachers and teachers are ordered by total students

--- a/src/app/views/students/edit.njk
+++ b/src/app/views/students/edit.njk
@@ -17,7 +17,10 @@
                 <h3>Editar</h3>
 
                 {% include 'students/fields.njk' %}
-
+        <div class="my-button">
+                
+                <button id="save-button" type="submit">Salvar</button>
+                
                 <input 
                     type="hidden" 
                     name="id" 
@@ -35,6 +38,8 @@
 
                 <button type="submit">Deletar</button>
             </form>
+            
+        </div>
 
         </section>
       
