--- a/src/app/views/teachers/fields.njk
+++ b/src/app/views/teachers/fields.njk
@@ -107,4 +107,6 @@
     </div>
 </div>
 
-<button id="save-button" type="submit">Salvar</button>
+{# <div class="my-button">
+    <button id="save-button" type="submit">Salvar</button>
+</div> #}
