--- a/src/app/views/teachers/index.njk
+++ b/src/app/views/teachers/index.njk
@@ -6,12 +6,26 @@
 
 {% block content %}
     <div class="card table-container">
-        <a href="teachers/create">Novo</a>
+
+        <div class="header">
+            <a class="button" href="teachers/create">Novo</a>
+            <form action="/teachers" method="GET">
+                <input 
+                    type="text" 
+                    name="filter"
+                    placeholder="Nome ou Atendimento"
+                    value={{filter}}
+                >
+                <button type="submit">Filtrar</button>
+            </form>
+        </div>
+
         <table>
             <thead>
                 <tr>
                     <th>Nome</th>
                     <th>Acompanhamento</th>
+                    <th>Alunos</th>
                     <th>Ação</th>
                 </tr>
             </thead>
@@ -23,6 +37,7 @@
                         {{ teacher.name }}
                     </td>
                     <td>{{ teacher.services }}</td>
+                    <td>{{ teacher.total_students }}</td>
                     <td><a href="teachers/{{ teacher.id }}">ver</a></td>
                 </tr>
                 {% endfor %}
