--- a/public/style.css
+++ b/public/style.css
@@ -187,6 +187,10 @@ button[type="submit"] {
     cursor: pointer;
 }
 
+.card-details .my-button {
+    display: flex;
+}
+
 .button {
     display: block;
     box-sizing: border-box;
@@ -194,11 +198,9 @@ button[type="submit"] {
     text-decoration: none;
 }
 
-.card-details button[type="submit"]:nth-child(2) {
-    position: absolute;
-    right: 33px;
-    top: 537px;
-    width: 40%;
+.card-details #form-delete button[type=submit]{
+    margin-left: 24px;
+    width: 150px;
     background: rgba(255, 10, 10, 0.8);
 }
 
@@ -266,3 +268,36 @@ tbody tr td:last-child a {
     margin: 8px;
     display: inline-block;
 }
+
+/* FILTER */
+
+.table-container .header {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    margin-bottom: 32px;
+}
+
+.table-container .header a,
+.table-container .header form button {
+    margin: 0;
+    width: 120px;
+}
+
+.table-container .header form {
+    display: grid;
+    grid-template-columns: 1fr 120px;
+    align-items: center;
+    gap: 12px;
+    
+}
+
+.table-container .header form input {
+    box-sizing: border-box;
+    border: 1px solid #eee;
+    padding: 4px 8px;
+}
+
+/* .table-container .header form button {
+    border: 1px solid #eee;
+} */
