--- a/src/app/views/students/show.njk
+++ b/src/app/views/students/show.njk
@@ -37,6 +37,11 @@
                 <div>{{ student.hours }}</div>
             </div>
 
+            <div class="item">
+                <div>Professor</div>
+                <div>{{ student.teachers_name }}</div>
+            </div>
+
             <a href="/students/{{ student.id }}/edit" class="button">Editar</a>
 
         </section>
