--- a/src/app/views/teachers/edit.njk
+++ b/src/app/views/teachers/edit.njk
@@ -9,24 +9,24 @@
     <div class="card">
 
         <section class="card-image" style="background: url({{ teacher.avatar_url }}) no-repeat center center / cover">
-            {# <div class="card-image"></div> #}
         </section>
 
         <section class="card-details">
+            <h3>Editar</h3>
             <form action="/teachers?_method=PUT" method="POST">
             
-                <h3>Editar</h3>
 
                 {% include 'teachers/fields.njk' %}
+        <div class="my-button">
 
                 <input 
                     type="hidden" 
                     name="id" 
                     value="{{ teacher.id }}"
                 >
-
+                <button id="save-button" type="submit">Salvar</button>
             </form>
-            
+        
             <form id="form-delete" method="POST" action="/teachers?_method=DELETE">
                 <input 
                     type="hidden" 
@@ -35,7 +35,10 @@
                 >
 
                 <button type="submit">Deletar</button>
+
+
             </form>
+        </div>
 
         </section>
       
