feat: implemented the feature pagination for page teachers and students
implemented the feature pagination for page teachers and students, changed the README.md includes
now new screenshots

--- a/src/app/views/students/create.njk
+++ b/src/app/views/students/create.njk
@@ -14,6 +14,8 @@
             <h3>Novo Aluno</h3>
 
             {% include 'students/fields.njk' %}
+            
+            <button id="save-button" type="submit">Salvar</button>
 
         </section>
     </form>
