--- a/public/style.css
+++ b/public/style.css
@@ -105,13 +105,13 @@ header {
     border: none;
 }
 
-.card .card-details .item:last-child div + div{
+/* .card .card-details .item:last-child div + div{
     background: var(--primary-color);
     color: white;
     display: inline-block;
     padding: 8px;
     border-radius: 16px;
-}
+} */
 
 .card .card-details span,
 .card .card-details .item div:nth-child(2) {
@@ -298,6 +298,35 @@ tbody tr td:last-child a {
     padding: 4px 8px;
 }
 
-/* .table-container .header form button {
-    border: 1px solid #eee;
-} */
+/* PAGINATION */
+
+.table-container {
+    display: grid;
+    grid-template: 80px 1fr 16px/ 1fr ;
+}
+
+.table-container .header {
+    align-self: start;
+    margin: 0;
+}
+.pagination a,
+.pagination span {
+    margin-right: 16px;
+    text-decoration: none;
+    color: var(--primary-color);
+}
+
+.pagination a:hover {
+    filter: brightness(0.7);
+    border-bottom: 1px solid var(--primary-color);
+}
+
+.table-container .pagination {
+    justify-self: center;
+    align-self: end;
+}
+
+.table-container #btn {
+    padding: 8px 12px;
+    font-size: 14px;
+}
