--- a/src/app/views/students/index.njk
+++ b/src/app/views/students/index.njk
@@ -6,7 +6,20 @@
 
 {% block content %}
     <div class="card table-container">
-        <a href="students/create">Novo</a>
+
+        <div class="header">
+            <a id="btn" class="button" href="students/create">Novo</a>
+            <form action="/students" method="GET">
+                <input 
+                    type="text" 
+                    name="filter"
+                    placeholder="Nome ou email"
+                    value={{filter}}
+                >
+                <button id="btn" type="submit">Filtrar</button>
+            </form>
+        </div>
+
         <table>
             <thead>
                 <tr>
@@ -30,5 +43,12 @@
                 {% endfor %}
             </tbody>
         </table>
+
+        <div class="pagination"
+            data-page={{pagination.page}}
+            data-total={{pagination.total}}
+            data-filter={{filter}}
+        ></div>
+
     </div>
 {% endblock content %}
