--- a/src/app/views/teachers/create.njk
+++ b/src/app/views/teachers/create.njk
@@ -15,6 +15,8 @@
 
             {% include 'teachers/fields.njk' %}
 
+            <button id="save-button" type="submit">Salvar</button>
+
         </section>
     </form>
 {% endblock content %}
